# ElasticFusion

./: CMakeLists.txt  context_helper.h  efusion_library.cpp
Core/src/: CMakeLists.txt  Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.h
Core/src/Shaders/: Shaders.h
Core/src/Utils/: DeformationGraph.cpp  GPUConfig.h  OdometryProvider.h  Parse.cpp
GPUTest/src/: GPUTest.cpp
GUI/src/: MainController.cpp  MainController.h
GUI/src/Tools/: GUI.h  GroundTruthOdometry.cpp  OpenNI2Interface.h
